// clang-format off

syntax = "proto3";

package reccauth;

message AccessTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  string token_type = 3;
  int32 expires_in = 4;
}
